name:                haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/huseyinyilmaz/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Huseyin Yilmaz
maintainer:          yilmazhuseyin@gmail.com
copyright:           mit
category:            misc
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sorting
                     , Heap
  build-depends:       base >= 4.7 && < 5
                     , vector
  default-language:    Haskell2010

executable sorting-perf
  hs-source-dirs:      app
  main-is:             SortingPerf.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell
                     , criterion
  default-language:    Haskell2010

test-suite haskell-sort-quickcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             SortingTest.hs
  build-depends:       base
                     , QuickCheck
                     , haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite haskell-heap-quickcheck-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HeapTest.hs
  build-depends:       base
                     , QuickCheck
                     , haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/huseyinyilmaz/haskell
